--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "appium-chromedriver": "^4.27.3",
     "chai": "^4.3.4",
     "chromedriver": "^92.0.1",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "faker": "^5.5.3",
     "wdio-chromedriver-service": "^7.2.0",
