--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
       env:
         BS_USER: ${{ secrets.BS_USER }}
         BS_KEY: ${{ secrets.BS_KEY }}
+    - run: echo "$BS_USER"
     - run: npm i
     - run: npm i -g appium
-    - run: BASEURL=https://storefront.stage.amuse.com npm run iosBrowser 
         
