--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,14 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+      
+    - name: Running
+    - run: |
+        if["$BS_USER" eq "nohelia_3XgEJy"]
+        then 
+          echo "Si es"
+        fi
       env:
         BS_USER: ${{ secrets.BS_USER }}
         BS_KEY: ${{ secrets.BS_KEY }}
-    - run: echo $BS_USER
         
