--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
       
     - name: Running
       run: |
-        if[ "$BS_USER" == "nohelia_3XgEJy" ]
+        if[ "$env:SUPER_SECRET" == "nohelia_3XgEJy" ]
         then 
           echo "Si es"
         fi
