--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,4 +34,5 @@ jobs:
       env:
         BS_USER: ${{ secrets.BS_USER }}
         BS_KEY: ${{ secrets.BS_KEY }}
+        SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
         
