--- a/.github/workflows/main-test.yml
+++ b/.github/workflows/main-test.yml
@@ -31,4 +31,5 @@ jobs:
       env:
         BS_USER: ${{ secrets.BS_USER }}
         BS_KEY: ${{ secrets.BS_KEY }}
-        SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
+        SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }},
+        MAGENTO_PROD: ${{ secrets.MAGENTO_PROD }},
