--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,11 +1,11 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: IOS Prod Tests
+name: iOS Prod
 
 on:
   schedule:
-    - cron:  '0 11,15 * * *'
+    - cron:  '0 12,19 * * *'
 
 jobs:
   build:
