--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,5 @@ jobs:
         BS_USER: ${{ secrets.BS_USER }}
         BS_KEY: ${{ secrets.BS_KEY }}
         SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }},
+        AMUSE_SLACK_WEBHOOK: ${{secrets.AMUSE_SLACK_WEBHOOK}}
         MAGENTO_PROD: ${{ secrets.MAGENTO_PROD }},
