--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/react": "^17.0.17",
     "@wdio/codemod": "^0.9.0",
+    "appium": "^1.22.2",
     "jscodeshift": "^0.13.0"
   },
   "devDependencies": {
